Changes since last Roxen Challenger 1.3
-----------------------------------------------

+ Now works with Pike 7. Not completely tested but at least everything
  seems to compile ok.