@@ -515,6 +515,6 @@ export CC CFLAGS REALCFLAGS WARN OPTIMIZE
 
 export CPPFLAGS LDFLAGS
 
-AC_CONFIG_SUBDIRS(extern tools src)
+AC_CONFIG_SUBDIRS( src)
 AC_OUTPUT(Makefile)
 
