@@ -1,5 +1,15 @@
 Changes since last Roxen Challenger 1.3
 -----------------------------------------------
-
++ Caudium is a Roxen Challenger 1.3 fork. We have different goals and
+  ideas on what needs to be done. Check out our website at
+  http://caudium.net/ for further information.
 + Now works with Pike 7. Not completely tested but at least everything
   seems to compile ok.
++ Wrote query-string and HTTP header parsers in C. Seems to give a
+  nice performance boast.
++ Fixed small bug in htmlparse.pike when using tags that return a
+  string directly.
++ Added PiXSL, a glue to Sablotron (XSLT parser) and UltraLog, a log
+  parser, to the default distribution.
++ Pike not isn't built as part of the server, but instead you specify
+  which Pike you want to use (or use the default one). 
